crates/tree-sitter-tolk/grammar.js
    source_file: $ => repeat($._top_level_declaration),

    // ----------------------------------------------------------
    // top-level declarations

    _top_level_declaration: $ =>
        choice(
            $.tolk_required_version,
            $.import_directive,
            $.contract_declaration,
            $.global_var_declaration,
            $.constant_declaration,
            $.type_alias_declaration,
            $.struct_declaration,
            $.enum_declaration,
            $.function_declaration,
            $.method_declaration,
            $.get_method_declaration,
            $.empty_statement,
        ),

    contract_declaration: $ =>
        seq("contract", field("name", $.identifier), field("body", $.contract_body)),

    contract_body: $ => seq("{", repeat(seq($.contract_field, optional(","))), "}"),

    contract_field: $ =>
        seq(field("name", $.identifier), ":", field("value", choice($._type_hint, $._expression))),

    constant_declaration: $ =>
        prec.right(
            seq(
                optional(field("annotations", $.annotation_list)),
                "const",
                field("name", $.identifier),
                optional(seq(":", field("type", $._type_hint))),
                "=",
                field("value", $._expression),
                optional(";"),
            ),
        ),

    _function_body: $ =>
        choice(
            field("body", $.block_statement),
            field("asm_body", $.asm_body),
            field("builtin_specifier", $.builtin_specifier),
        ),

    function_declaration: $ =>
        seq(
            optional(field("annotations", $.annotation_list)),
            "fun",
            field("name", $.identifier),
            optional(field("type_parameters", $.type_parameters)),
            optional(field("parameters", $.parameter_list)),
            optional(seq(":", field("return_type", optional($._type_hint)))),
            optional($._function_body),
        ),

    parameter_list: $ => seq("(", commaSep($.parameter_declaration), optional(","), ")"),
    _statement_require_semicolon_unless_last: $ =>
        choice(
            // $.local_vars_declaration,
            $.return_statement,
            $.do_while_statement,
            $.break_statement,
            $.continue_statement,
            $.throw_statement,
            $.assert_statement,
            $.expression_statement,
        ),
    _statement: $ =>
        choice(
            $._statement_ending_with_brace,
            prec.right(seq($._statement_require_semicolon_unless_last, optional(";"))),
        ),

    // local_vars_declaration: $ =>
    //     seq(
    //         field("kind", choice("var", "val")),
    //         field("lhs", $.var_declaration_lhs),
    //         optional(seq("=", field("assigned_val", $._expression))),
    //     ),

    var_declaration: $ =>
        prec.right(
            seq(
                field("name", $.identifier),
                optional(choice(seq(":", field("type", $._type_hint)), field("redef", "redef"))),
            ),
        ),
    _var_declaration_lhs: $ =>
        choice($.tuple_vars_declaration, $.tensor_vars_declaration, $.var_declaration),

    var_declaration_lhs: $ => seq(field("kind", choice("var", "val")), $._var_declaration_lhs),

    block_statement: $ =>
        prec.dynamic(
            100,
            seq(
                "{",
                repeat($._statement),
                optional($._statement_require_semicolon_unless_last),
                "}",
            ),
        ),

    return_statement: $ => prec.right(seq("return", optional(field("body", $._expression)))),

    expression_statement: $ => $._expression,

    // ----------------------------------------------------------
    // expressions

    _expression: $ =>
        choice(
            $.var_declaration_lhs,
            $.assignment,
            $.set_assignment,
            $.ternary_operator,
            $.binary_operator,
            $.unary_operator,
            $.lazy_expression,
            $.cast_as_operator,
            $.is_type_operator,
            $.not_null_operator,
            $.dot_access,
            $.function_call,
            $.generic_instantiation,
            $.parenthesized_expression,
            $.match_expression,
            $.object_literal,
            $.tensor_expression,
            $.typed_tuple,
            $.lambda_expression,
            $.number_literal,
            $.string_literal,
            $.boolean_literal,
            $.null_literal,
            $.underscore,
            $.identifier,
        ),

    assignment: $ =>
        prec.right(10, seq(field("left", $._expression), "=", field("right", $._expression))),

    _comparison_lt_gt: $ =>
        prec.left(15, seq($._expression, field("operator_name", $._brackets_lt_gt), $._expression)),

    binary_operator: $ =>
        choice(
            prec.right(10, seq($._expression, field("operator_name", "??"), $._expression)),
            prec.left(
                13,
                seq($._expression, field("operator_name", choice("&&", "||")), $._expression),
            ),
            prec.left(
                14,
                seq($._expression, field("operator_name", choice("&", "|", "^")), $._expression),
            ),
            prec.left(
                15,
                seq(
                    $._expression,
                    field("operator_name", choice("==", "!=", "<=", ">=", "<=>")),
                    $._expression,
                ),
            ),
            $._comparison_lt_gt,
            prec.left(
                17,
                seq(
                    $._expression,
                    field("operator_name", choice("<<", ">>", "~>>", "^>>")),
                    $._expression,
                ),
            ),
            prec.left(
                20,
                seq($._expression, field("operator_name", choice("-", "+")), $._expression),
            ),
            prec.left(
                30,
                seq(
                    $._expression,
                    field("operator_name", choice("*", "/", "%", "~/", "^/")),
                    $._expression,
                ),
            ),
        ),

    unary_operator: $ =>
        choice(
            prec.left(
                75,
                seq(
                    field("operator_name", choice("!", "~", "-", "+")),
                    field("argument", $._expression),
                ),
            ),
        ),

    dot_access: $ =>
        prec(
            80,
            seq(
                field("obj", $._expression),
                ".",
                field("field", choice($.identifier, $.numeric_index)), // for method call, dot_access is wrapped into function_call, "field" actually means method name
            ),
        ),

    function_call: $ =>
        prec.left(
            90,
            seq(
                field("callee", $._expression), // callee can be generic_instantiation or dot_access
                field("arguments", $.argument_list),
            ),
        ),
    argument_list: $ => seq("(", commaSep($.call_argument), optional(","), ")"),
    parenthesized_expression: $ => seq("(", field("inner", $._expression), optional(","), ")"),
    typed_tuple: $ =>
        seq(
            optional(field("type", $._type_hint)),
            "[",
            field("elements", commaSep($._expression)),
            optional(","),
            "]",
        ),

    _type_hint: $ =>
        prec.dynamic(
            100,
            choice(
                alias($.identifier, $.type_identifier),
                $.type_instantiatedTs,
                $.tensor_type,
                $.tuple_type,
                $.parenthesized_type,
                $.fun_callable_type,
                $.nullable_type,
                $.union_type,
                $.null_literal,
            ),
        ),

    tensor_type: $ =>
        prec.dynamic(103, choice(seq("(", ")"), seq("(", commaSep2($._type_hint), ")"))),
    number_literal: $ => token(choice(seq("0x", /[0-9a-fA-F]+/), seq("0b", /[01]+/), /[0-9]+/)),
    string_literal: $ =>
        token(
            choice(
                seq('"""', repeat(choice(/[^"]/, /"[^"]/, /""[^"]/)), '"""'),
                seq('"', repeat(choice(/[^"\\\n]/, /\\./)), '"'),
            ),
        ),
    identifier: $ => /`[^`]+`|[a-zA-Z$_][a-zA-Z0-9$_]*/,
    numeric_index: $ => /[0-9]+/,

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
