crates/tree-sitter-tolk/test/test/corpus/strings.test.txt
========================================================================
String literals with escapes and multiline
========================================================================
fun test() {
    val s1 = "simple string";
    val s2 = "string with \n escape \t and \" quotes";
    val s3 = """
        multiline
        string with "quotes"
        and \n literal backslash
    """;
    val s4 = "";
    val s5 = """""";
}
------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block_statement
      (expression_statement
        (assignment
          left: (var_declaration_lhs
            (var_declaration
              name: (identifier)))
          right: (string_literal)))
      (expression_statement
        (assignment
          left: (var_declaration_lhs
            (var_declaration
              name: (identifier)))
          right: (string_literal)))
      (expression_statement
        (assignment
          left: (var_declaration_lhs
            (var_declaration
              name: (identifier)))
          right: (string_literal)))
      (expression_statement
        (assignment
          left: (var_declaration_lhs
            (var_declaration
              name: (identifier)))
          right: (string_literal)))
      (expression_statement
        (assignment
          left: (var_declaration_lhs
            (var_declaration
              name: (identifier)))
          right: (string_literal))))))
